# chip-test-data-platform

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  generate_stdf.py  pyproject.toml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: d527af71c67d_initial_tables.py
backend/app/: main.py  worker.py
backend/app/core/: config.py  connections.py  deps.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit.py  auth.py  domain.py
backend/app/routers/: audit_logs.py  auth.py  events.py  lots.py  measurements.py  stdf.py  users.py
backend/app/schemas/: auth.py  lots.py  stdf.py
backend/app/services/: audit.py  auth.py  events.py  stdf_parser.py  stdf_upload.py
backend/docs/adr/: ADR-001-async-stdf-processing-rabbitmq.md  ADR-003-single-codebase-separate-processes.md  ADR-005-measurements-partitioning-deferred.md  ADR-006-monitoring-deferred.md  ADR-007-redis-pubsub-realtime-events.md
backend/tests/: conftest.py  test_api.py
docs/adr/: ADR-002-postgresql-normalized-schema.md  ADR-004-file-storage-interface-abstraction.md
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: DashboardPage.tsx  ExplorerPage.tsx  LoginPage.tsx  UploadPage.tsx
nginx/: nginx.conf
